--- a/src/app/home/process/process.component.html
+++ b/src/app/home/process/process.component.html
@@ -14,7 +14,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>1</span>
-                                <i class="ti-desktop display-18 colorban d-block mb-3"></i>
+                                <i class="bi bi-display display-18 colorban d-block mb-3"></i>
                                 <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.online.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.online.description' | translate }}</p>
                             </div>
@@ -24,7 +24,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>2</span>
-                                <i class="ti-file display-18 colorban d-block mb-3"></i>
+                                <i class="bi bi-card-checklist display-18 colorban d-block mb-3"></i>
                                 <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.form.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.form.description' | translate }}</p>
                             </div>
@@ -34,7 +34,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>3</span>
-                                <i class="ti-agenda display-18 colorban d-block mb-3"></i>
+                                <i class="bi bi-calendar3 display-18 colorban d-block mb-3"></i>
                                 <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.submit.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.submit.description' | translate }}</p>
                             </div>
@@ -44,7 +44,7 @@
                         <div class="card card-style2">
                             <div class="card-body">
                                 <span>4</span>
-                                <i class="ti-check-box display-18 colorban d-block mb-3"></i>
+                                <i class="bi bi-check-square display-18 colorban d-block mb-3"></i>
                                 <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.approve.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.approve.description' | translate }}</p>
                             </div>
