--- a/src/app/home/services/services.component.html
+++ b/src/app/home/services/services.component.html
@@ -1,74 +1,74 @@
-        <section>
-            <div class="container">
-                <div class="row align-items-end mb-2-3 mb-md-6">
-                    <div class="col-lg-5 mb-3 mb-lg-0">
-                        <div class="main-title title-left">{{ 'homepage.services_component.whatWeOffer' | translate }}
-                            <span class="line-left"></span>
-                        </div>
-                        <h2 class="w-md-90 text-lg-start mb-0">{{ 'homepage.services_component.accomplishYourGoals' | translate }}</h2>
-                    </div>
-                    <div class="col-lg-7">
-                        <p class="mb-0">{{ 'homepage.services_component.loanDescription' | translate }}</p>
-                    </div>
+<section>
+    <div class="container">
+        <div class="row align-items-end mb-2-3 mb-md-6">
+            <div class="col-lg-5 mb-3 mb-lg-0">
+                <div class="main-title title-left">{{ 'homepage.services_component.whatWeOffer' | translate }}
+                    <span class="line-left"></span>
                 </div>
-                <div class="row g-lg-5 mt-n1-9">
-                    <div class="col-md-6 col-xl-4 mt-1-9">
-                        <div class="card card-style1">
-                            <img src="../../../assets/img/service/main-services-1.jpg" class="d-block" alt="...">
-                            <div class="service-data">
-                                <div class="lh-1"><i class="ti-credit-card display-20 display-lg-15 text-white"></i></div>
-                                <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.personalLoan.title' | translate }}</h3>
-                            </div>
-                            <div class="card-body">
-                                <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-credit-card display-15 colorban"></i></div>
-                                    <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.personalLoan.title' | translate }}</a></h3>
-                                </div>
-                                <div>
-                                    <p class="text-white mb-lg-4">{{ 'homepage.services_component.personalLoan.description' | translate }}</p>
-                                    <a class="butn small primary" href="#">{{ 'homepage.services_component.personalLoan.readMore' | translate }}</a>
-                                </div>
-                            </div>
-                        </div>
+                <h2 class="w-md-90 text-lg-start mb-0">{{ 'homepage.services_component.accomplishYourGoals' | translate }}</h2>
+            </div>
+            <div class="col-lg-7">
+                <p class="mb-0">{{ 'homepage.services_component.loanDescription' | translate }}</p>
+            </div>
+        </div>
+        <div class="row g-lg-5 mt-n1-9">
+            <div class="col-md-6 col-xl-4 mt-1-9">
+                <div class="card card-style1">
+                    <img src="../../../assets/img/service/main-services-1.jpg" class="d-block" alt="...">
+                    <div class="service-data">
+                        <div class="lh-1"><i class="bi bi-credit-card display-20 display-lg-15 text-white"></i></div>
+                        <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.personalLoan.title' | translate }}</h3>
                     </div>
-                    <div class="col-md-6 col-xl-4 mt-1-9">
-                        <div class="card card-style1">
-                            <img src="../../../assets/img/service/main-services-2.jpg" class="d-block" alt="...">
-                            <div class="service-data">
-                                <div class="lh-1"><i class="ti-pencil-alt display-20 display-lg-15 text-white"></i></div>
-                                <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.educationLoan.title' | translate }}</h3>
-                            </div>
-                            <div class="card-body">
-                                <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-pencil-alt display-15 colorban"></i></div>
-                                    <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.educationLoan.title' | translate }}</a></h3>
-                                </div>
-                                <div>
-                                    <p class="text-white mb-lg-4">{{ 'homepage.services_component.educationLoan.description' | translate }}</p>
-                                    <a class="butn small primary" href="#">{{ 'homepage.services_component.educationLoan.readMore' | translate }}</a>
-                                </div>
-                            </div>
+                    <div class="card-body">
+                        <div class="service-inner">
+                            <div class="lh-1"><i class="bi bi-credit-card display-15 colorban"></i></div>
+                            <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.personalLoan.title' | translate }}</a></h3>
                         </div>
-                    </div>
-                    <div class="col-md-6 col-xl-4 mt-1-9">
-                        <div class="card card-style1">
-                            <img src="../../../assets/img/service/main-services-3.jpg" class="d-block" alt="...">
-                            <div class="service-data">
-                                <div class="lh-1"><i class="ti-zip display-20 display-lg-15 text-white"></i></div>
-                                <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.businessLoan.title' | translate }}</h3>
-                            </div>
-                            <div class="card-body">
-                                <div class="service-inner">
-                                    <div class="lh-1"><i class="ti-zip display-15 colorban"></i></div>
-                                    <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.businessLoan.title' | translate }}</a></h3>
-                                </div>
-                                <div>
-                                    <p class="text-white mb-lg-4">{{ 'homepage.services_component.businessLoan.description' | translate }}</p>
-                                    <a class="butn small primary" href="#">{{ 'homepage.services_component.businessLoan.readMore' | translate }}</a>
-                                </div>
-                            </div>
+                        <div>
+                            <p class="text-white mb-lg-4 font-size = small">{{ 'homepage.services_component.personalLoan.description' | translate }}</p>
+                            <a class="butn small primary" href="#">{{ 'homepage.services_component.personalLoan.readMore' | translate }}</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="col-md-6 col-xl-4 mt-1-9">
+                <div class="card card-style1">
+                    <img src="../../../assets/img/service/main-services-2.jpg" class="d-block" alt="...">
+                    <div class="service-data">
+                        <div class="lh-1"><i class="bi bi-pencil display-20 display-lg-15 text-white"></i></div>
+                        <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.educationLoan.title' | translate }}</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="service-inner">
+                            <div class="lh-1"><i class="bi bi-pencil display-15 colorban"></i></div>
+                            <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.educationLoan.title' | translate }}</a></h3>
+                        </div>
+                        <div>
+                            <p class="text-white mb-lg-4 font-size = small">{{ 'homepage.services_component.educationLoan.description' | translate }}</p>
+                            <a class="butn small primary" href="#">{{ 'homepage.services_component.educationLoan.readMore' | translate }}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-xl-4 mt-1-9">
+                <div class="card card-style1">
+                    <img src="../../../assets/img/service/main-services-3.jpg" class="d-block" alt="...">
+                    <div class="service-data">
+                        <div class="lh-1"><i class="bi bi-file-earmark-zip display-20 display-lg-15 text-white"></i></div>
+                        <h3 class="h5 text-white mb-0 ms-3">{{ 'homepage.services_component.businessLoan.title' | translate }}</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="service-inner">
+                            <div class="lh-1"><i class="bi bi-file-earmark-zip display-15 colorban"></i></div>
+                            <h3 class="h5 mb-0 ms-3"><a href="#" class="text-white">{{ 'homepage.services_component.businessLoan.title' | translate }}</a></h3>
+                        </div>
+                        <div>
+                            <p class="text-white mb-lg-4 font-size = small">{{ 'homepage.services_component.businessLoan.description' | translate }}</p>
+                            <a class="butn small primary" href="#">{{ 'homepage.services_component.businessLoan.readMore' | translate }}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
