client area V2 cleaning

--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -35,9 +35,9 @@
                         <div class="input-group">
                             <select id="qest1" name="qest1" class="form-select">
                                 <option value="" disabled selected>{{ 'professionnel.authentication.select_question1' | translate }}</option>
-                                <option value="Quel est le nom de votre mentor professionnel ?">{{ 'professionnel.authentication.cond1' | translate }}</option>
-                                <option value="Quel est le nom de votre premier client en tant qu'entreprise ?">{{ 'professionnel.authentication.cond2' | translate }}</option>
-                                <option value="Quel est le nom de votre cabinet d'audit ou de votre comptable ?">{{ 'professionnel.authentication.cond3' | translate }}</option>                
+                                <option value="Quel était le nom de votre premier animal de compagnie ?">Quel était le nom de votre premier animal de compagnie ?</option>
+                                <option value="Quelle est la ville de naissance de votre mère ?">Quelle est la ville de naissance de votre mère ?</option>
+                                <option value="Quel est le titre de votre livre préféré ?">Quel est le titre de votre livre préféré ?</option>                
                             </select>  
                         </div>   
                     </div>
@@ -54,10 +54,10 @@
                         <div class="input-group">
                             <select id="qest2" name="qest2"  class="form-select">
                                 <option value="" disabled selected>{{ 'professionnel.authentication.select_question2' | translate }}</option>
-                                <option value="Quel est le nom de votre mentor professionnel ?">{{ 'professionnel.authentication.cond1' | translate }}</option>
-                                <option value="Quel est le nom de votre premier client en tant qu'entreprise ?">{{ 'professionnel.authentication.cond2' | translate }}</option>
-                                <option value="Quel est le nom de votre cabinet d'audit ou de votre comptable ?">{{ 'professionnel.authentication.cond3' | translate }}</option>                
-                             </select>  
+                                <option value="Quel était le nom de votre premier animal de compagnie ?">Quel était le nom de votre premier animal de compagnie ?</option>
+                                <option value="Quelle est la ville de naissance de votre mère ?">Quelle est la ville de naissance de votre mère ?</option>
+                                <option value="Quel est le titre de votre livre préféré ?">Quel est le titre de votre livre préféré ?</option>                
+                            </select>                                         
                         </div>   
                     </div>
                     <div class="col-md-6">
