--- a/src/app/client/transactionsDashboard/profile-settings/profile-settings-notifications/profile-settings-notifications.component.html
+++ b/src/app/client/transactionsDashboard/profile-settings/profile-settings-notifications/profile-settings-notifications.component.html
@@ -16,9 +16,7 @@
                   <ul class="nav nav-pills flex-column flex-md-row mb-3">
                     <li class="nav-item"><a class="nav-link" href="/settings"><i class="bx bx-user me-1"></i> Account</a></li>
                     <li class="nav-item"><a class="nav-link" href="/settings/security"><i class="bx bx-lock-alt me-1"></i> Security</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i class="bx bx-bell me-1"></i> Notifications</a></li>
-                    <li class="nav-item"><a class="nav-link" href="javascript:void(0);"><i class="bx bx-link-alt me-1"></i> Connections</a></li>
-                  </ul>
+                    <li class="nav-item"><a class="nav-link active" href="javascript:void(0);"><i class="bx bx-bell me-1"></i> Notifications</a></li>                  </ul>
                   <div class="card">
                     <!-- Notifications -->
                     <h5 class="card-header">Recent Devices</h5>
