--- a/src/app/client/transactionsDashboard/profile-settings/profile-settings.component.css
+++ b/src/app/client/transactionsDashboard/profile-settings/profile-settings.component.css
@@ -129,19 +129,6 @@
     }
 }
 
-body {
-    margin: 0;
-    font-family: var(--bs-body-font-family);
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
-    color: var(--bs-body-color);
-    text-align: var(--bs-body-text-align);
-    background-color: var(--bs-body-bg);
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(67,89,113,0)
-}
-
 hr {
     margin: 1rem 0;
     color: #d9dee3;
@@ -683,14 +670,7 @@ progress {
     }
 }
 
-:root {
-    --bs-breakpoint-xs: 0;
-    --bs-breakpoint-sm: 576px;
-    --bs-breakpoint-md: 768px;
-    --bs-breakpoint-lg: 992px;
-    --bs-breakpoint-xl: 1200px;
-    --bs-breakpoint-xxl: 1400px
-}
+
 
 .row {
     --bs-gutter-x: 1.625rem;
@@ -2706,17 +2686,17 @@ textarea.form-control-lg {
 }
 
 .form-floating>.form-control:focus,.form-floating>.form-control:not(:placeholder-shown),.form-floating>.form-control-plaintext:focus,.form-floating>.form-control-plaintext:not(:placeholder-shown) {
-    padding-top: 1.625rem;
+   /* padding-top: 1.625rem;*/
     padding-bottom: .625rem
 }
 
 .form-floating>.form-control:-webkit-autofill,.form-floating>.form-control-plaintext:-webkit-autofill {
-    padding-top: 1.625rem;
+   /* padding-top: 1.625rem;*/
     padding-bottom: .625rem
 }
 
 .form-floating>.form-select {
-    padding-top: 1.625rem;
+    /*padding-top: 1.625rem;*/
     padding-bottom: .625rem
 }
 
@@ -3618,14 +3598,7 @@ textarea.form-control-lg {
     justify-content: space-between
 }
 
-.navbar-brand {
-    padding-top: var(--bs-navbar-brand-padding-y);
-    padding-bottom: var(--bs-navbar-brand-padding-y);
-    margin-right: var(--bs-navbar-brand-margin-end);
-    font-size: var(--bs-navbar-brand-font-size);
-    color: var(--bs-navbar-brand-color);
-    white-space: nowrap
-}
+
 
 .navbar-brand:hover,.navbar-brand:focus {
     color: var(--bs-navbar-brand-hover-color)
@@ -3653,11 +3626,7 @@ textarea.form-control-lg {
     position: static
 }
 
-.navbar-text {
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    color: var(--bs-navbar-color)
-}
+
 
 .navbar-text a,.navbar-text a:hover,.navbar-text a:focus {
     color: var(--bs-navbar-active-color)
@@ -6011,16 +5980,6 @@ background-image: linear-gradient(93deg, #f30000, #511106) !important;
     opacity: 1
 }
 
-.carousel-caption {
-    position: absolute;
-    right: 15%;
-    bottom: 1.25rem;
-    left: 15%;
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-    color: #fff;
-    text-align: center
-}
 
 .carousel-dark .carousel-control-prev-icon,.carousel-dark .carousel-control-next-icon {
     filter: invert(1) grayscale(100)
@@ -6898,7 +6857,7 @@ background-image: linear-gradient(93deg, #f30000, #511106) !important;
 
 .ratio::before {
     display: block;
-    padding-top: var(--bs-aspect-ratio);
+    /*padding-top: var(--bs-aspect-ratio);*/
     content: ""
 }
 
@@ -7482,17 +7441,13 @@ a.invert-bg-dark:hover,a.invert-bg-dark:focus {
     }
 }
 
-.container-p-y:not([class^=pt-]):not([class*=" pt-"]) {
-    padding-top: 1.625rem !important
-}
+
 
 .container-p-y:not([class^=pb-]):not([class*=" pb-"]) {
     padding-bottom: 1.625rem !important
 }
 
-.container-m-ny:not([class^=mt-]):not([class*=" mt-"]) {
-    margin-top: -1.625rem !important
-}
+
 
 .container-m-ny:not([class^=mb-]):not([class*=" mb-"]) {
     margin-bottom: -1.625rem !important
@@ -12777,9 +12732,6 @@ html:not([dir=rtl]) .toast.bs-toast .toast-header .btn-close {
     padding-bottom: .75rem
 }
 
-.offcanvas-body {
-    padding-top: .75rem
-}
 
 [dir=rtl] .offcanvas-header .btn-close {
     margin: -0.75rem auto -0.75rem -0.75rem
@@ -13842,35 +13794,6 @@ html:not([dir=rtl]) .toast.bs-toast .toast-header .btn-close {
     padding-left: 3rem !important
 }
 
-.py-0 {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important
-}
-
-.py-1 {
-    padding-top: .25rem !important;
-    padding-bottom: .25rem !important
-}
-
-.py-2 {
-    padding-top: .5rem !important;
-    padding-bottom: .5rem !important
-}
-
-.py-3 {
-    padding-top: 1rem !important;
-    padding-bottom: 1rem !important
-}
-
-.py-4 {
-    padding-top: 1.5rem !important;
-    padding-bottom: 1.5rem !important
-}
-
-.py-5 {
-    padding-top: 3rem !important;
-    padding-bottom: 3rem !important
-}
 
 .pt-0 {
     padding-top: 0 !important
@@ -23380,15 +23303,6 @@ html:not(.layout-menu-fixed) .menu-inner-shadow {
     font-size: .8125rem
 }
 
-.layout-navbar .navbar-search-wrapper .navbar-search-suggestion .suggestions-header::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: .7rem;
-    height: 1px;
-    margin-top: .375rem;
-    background: #a1acb8
-}
 
 [dir=rtl] .layout-navbar .navbar-search-wrapper .navbar-search-suggestion .suggestions-header::before {
     right: 0;
@@ -23402,65 +23316,7 @@ html:not(.layout-menu-fixed) .menu-inner-shadow {
     padding: 0 1.5rem
 }
 
-.layout-navbar.navbar-detached.container-xxl {
-    max-width: calc(1440px - 1.625rem*2)
-}
 
-.layout-navbar-fixed .layout-navbar.navbar-detached {
-    width: calc(100% - 1.625rem*2 - 16.25rem)
-}
-
-@media(max-width: 1199.98px) {
-    .layout-navbar-fixed .layout-navbar.navbar-detached {
-        width:calc(100% - 1.625rem*2) !important
-    }
-}
-
-@media(max-width: 991.98px) {
-    .layout-navbar-fixed .layout-navbar.navbar-detached {
-        width:calc(100% - 1rem*2) !important
-    }
-}
-
-.layout-navbar-fixed.layout-menu-collapsed .layout-navbar.navbar-detached {
-    width: calc(100% - 1.625rem*2 - 5.25rem)
-}
-
-@media(max-width: 1199.98px) {
-    .layout-navbar.navbar-detached {
-        width:calc(100vw - (100vw - 100%) - 1.625rem*2) !important
-    }
-}
-
-@media(max-width: 991.98px) {
-    .layout-navbar.navbar-detached {
-        width:calc(100vw - (100vw - 100%) - 1rem*2) !important
-    }
-}
-
-.layout-menu-collapsed .layout-navbar.navbar-detached,.layout-without-menu .layout-navbar.navbar-detached {
-    width: calc(100% - 1.625rem*2)
-}
-
-.layout-navbar .search-input-wrapper .search-toggler {
-    position: absolute;
-    top: 1.25rem;
-    right: 1rem;
-    z-index: 1
-}
-
-[dir=rtl] .layout-navbar .search-input-wrapper .search-toggler {
-    right: inherit;
-    left: 1rem
-}
-
-.layout-navbar .search-input-wrapper .twitter-typeahead {
-    position: absolute !important;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%
-}
 
 @media(min-width: 1400px) {
     .layout-horizontal .layout-navbar .search-input-wrapper .twitter-typeahead.container-xxl {
@@ -23975,90 +23831,15 @@ html:not([dir=rtl]) .layout-menu-toggle i {
     }
 }
 
-html:not(.layout-navbar-fixed):not(.layout-menu-fixed):not(.layout-menu-fixed-offcanvas) .layout-page,html:not(.layout-navbar-fixed) .layout-content-navbar .layout-page {
-    padding-top: 0 !important
-}
-
 html:not(.layout-footer-fixed) .content-wrapper {
     padding-bottom: 0 !important
 }
 
-@media(max-width: 1199.98px) {
-    .layout-menu-fixed .layout-wrapper.layout-navbar-full .layout-menu,.layout-menu-fixed-offcanvas .layout-wrapper.layout-navbar-full .layout-menu {
-        top:0 !important
-    }
-
-    html:not(.layout-navbar-fixed) .layout-navbar-full .layout-page {
-        padding-top: 0 !important
-    }
-}
 
 .layout-navbar-hidden .layout-navbar {
     display: none
 }
 
-.layout-navbar-fixed .layout-navbar {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0
-}
-
-@media(min-width: 1200px) {
-    .layout-menu-fixed .layout-navbar-full .layout-navbar,.layout-menu-fixed-offcanvas .layout-navbar-full .layout-navbar {
-        position:fixed;
-        top: 0;
-        right: 0;
-        left: 0
-    }
-
-    .layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar,.layout-menu-fixed.layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar,.layout-menu-fixed-offcanvas.layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar {
-        left: 16.25rem
-    }
-
-    .layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar,.layout-menu-fixed.layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar,.layout-menu-fixed-offcanvas.layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar {
-        right: 16.25rem;
-        left: 0
-    }
-
-    .layout-menu-fixed .layout-horizontal .layout-page .menu-horizontal,.layout-menu-fixed-offcanvas .layout-horizontal .layout-page .menu-horizontal {
-        position: fixed;
-        top: 3.875rem
-    }
-
-    .layout-menu-fixed .layout-horizontal .layout-page .menu-horizontal+[class*=container-],.layout-menu-fixed-offcanvas .layout-horizontal .layout-page .menu-horizontal+[class*=container-] {
-        padding-top: 5.3rem !important
-    }
-
-    [dir=rtl].layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar,[dir=rtl].layout-menu-fixed.layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar,[dir=rtl].layout-menu-fixed-offcanvas.layout-navbar-fixed:not(.layout-menu-collapsed) .layout-content-navbar:not(.layout-without-menu) .layout-navbar {
-        right: 16.25rem;
-        left: 0
-    }
-
-    [dir=rtl].layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar,[dir=rtl].layout-menu-fixed.layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar,[dir=rtl].layout-menu-fixed-offcanvas.layout-navbar-fixed:not(.layout-menu-collapsed).layout-menu-flipped .layout-content-navbar:not(.layout-without-menu) .layout-navbar {
-        right: 0;
-        left: 16.25rem
-    }
-
-    .layout-navbar-fixed.layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas) .layout-content-navbar .layout-navbar,.layout-menu-fixed.layout-navbar-fixed.layout-menu-collapsed .layout-content-navbar .layout-navbar {
-        left: 5.25rem
-    }
-
-    .layout-navbar-fixed.layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas).layout-menu-flipped .layout-content-navbar .layout-navbar,.layout-menu-fixed.layout-navbar-fixed.layout-menu-collapsed.layout-menu-flipped .layout-content-navbar .layout-navbar {
-        right: 5.25rem;
-        left: 0
-    }
-
-    [dir=rtl].layout-navbar-fixed.layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas) .layout-content-navbar .layout-navbar,[dir=rtl].layout-menu-fixed.layout-navbar-fixed.layout-menu-collapsed .layout-content-navbar .layout-navbar {
-        right: 5.25rem;
-        left: 0
-    }
-
-    [dir=rtl].layout-navbar-fixed.layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas).layout-menu-flipped .layout-content-navbar .layout-navbar,[dir=rtl].layout-menu-fixed.layout-navbar-fixed.layout-menu-collapsed.layout-menu-flipped .layout-content-navbar .layout-navbar {
-        right: 0;
-        left: 5.25rem
-    }
-}
 
 .layout-footer-fixed .content-footer {
     position: fixed;
@@ -24175,13 +23956,6 @@ html:not(.layout-footer-fixed) .content-wrapper {
     }
 }
 
-.layout-navbar-fixed body:not(.modal-open) .layout-navbar-full .layout-navbar,.layout-menu-fixed body:not(.modal-open) .layout-navbar-full .layout-navbar,.layout-menu-fixed-offcanvas body:not(.modal-open) .layout-navbar-full .layout-navbar {
-    z-index: 1080
-}
-
-.layout-navbar-fixed body:not(.modal-open) .layout-content-navbar .layout-navbar,.layout-menu-fixed body:not(.modal-open) .layout-content-navbar .layout-navbar,.layout-menu-fixed-offcanvas body:not(.modal-open) .layout-content-navbar .layout-navbar {
-    z-index: 1075
-}
 
 .layout-footer-fixed .content-footer {
     z-index: 1030
@@ -24201,39 +23975,7 @@ html:not(.layout-footer-fixed) .content-wrapper {
     }
 }
 
-@media(min-width: 1200px) {
-    .layout-navbar-full .layout-navbar {
-        z-index:10
-    }
 
-    .layout-navbar-full .layout-menu {
-        z-index: 9
-    }
-
-    .layout-content-navbar .layout-navbar {
-        z-index: 9
-    }
-
-    .layout-content-navbar .layout-menu {
-        z-index: 10
-    }
-
-    .layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas).layout-menu-hover .layout-navbar-full .layout-menu {
-        z-index: 1075 !important
-    }
-
-    .layout-menu-collapsed:not(.layout-menu-offcanvas):not(.layout-menu-fixed-offcanvas) .layout-content-navbar .layout-menu {
-        z-index: 1085 !important
-    }
-
-    .layout-menu-fixed body:not(.modal-open) .layout-navbar-full .layout-menu,.layout-menu-fixed-offcanvas body:not(.modal-open) .layout-navbar-full .layout-menu {
-        z-index: 1075
-    }
-
-    .layout-navbar-fixed body:not(.modal-open) .layout-content-navbar .layout-menu,.layout-menu-fixed body:not(.modal-open) .layout-content-navbar .layout-menu,.layout-menu-fixed-offcanvas body:not(.modal-open) .layout-content-navbar .layout-menu {
-        z-index: 1080
-    }
-}
 
 .layout-menu-link-no-transition .layout-menu .menu-link,.layout-menu-link-no-transition .layout-menu-horizontal .menu-link {
     transition: none !important;
@@ -24279,11 +24021,6 @@ html:not(.layout-footer-fixed) .content-wrapper {
     .layout-transitioning.layout-menu-fixed-offcanvas .layout-menu {
         transition-duration: .3s;
         transition-property: transform,-webkit-transform
-    }
-
-    .layout-transitioning.layout-navbar-fixed .layout-content-navbar .layout-navbar,.layout-transitioning.layout-footer-fixed .content-footer {
-        transition-duration: .3s;
-        transition-property: left,right
     }
 
     .layout-transitioning:not(.layout-menu-offcanvas):not(.layout-menu-fixed):not(.layout-menu-fixed-offcanvas) .layout-menu {
@@ -26097,20 +25834,6 @@ html:not([dir=rtl]) .timeline-item {
     border-color: rgba(255,255,255,.2)
 }
 
-:root {
-    --bs-facebook: #3b5998;
-    --bs-twitter: #1da1f2;
-    --bs-google-plus: #dd4b39;
-    --bs-instagram: #e1306c;
-    --bs-linkedin: #0077b5;
-    --bs-github: #333;
-    --bs-dribbble: #ea4c89;
-    --bs-pinterest: #cb2027;
-    --bs-slack: #4a154b;
-    --bs-reddit: #ff4500;
-    --bs-youtube: #ff0000;
-    --bs-vimeo: #1ab7ea
-}
 
 .bg-facebook {
     background-color: #3b5998 !important
@@ -29223,15 +28946,6 @@ a.bg-vimeo:hover,a.bg-vimeo:focus {
     border-color: rgba(105,122,141,.076604902)
 }
 
-.layout-navbar-fixed .layout-wrapper:not(.layout-horizontal) .layout-page:before {
-    content: "";
-    width: 100%;
-    height: 4.75rem;
-    position: fixed;
-    top: 0px;
-    z-index: 10
-}
-
 .bg-menu-theme .menu-header {
     position: relative
 }
@@ -30579,12 +30293,6 @@ li.ui-timepicker-selected,.ui-timepicker-list .ui-timepicker-selected:hover {
     box-shadow: 0 0 .375rem .25rem rgba(161,172,184,.15)
 }
 
-.layout-navbar-fixed .layout-page:before {
-    backdrop-filter: saturate(200%) blur(10px);
-    background: linear-gradient(180deg, rgba(245, 245, 249, 0.7) 44%, rgba(245, 245, 249, 0.43) 73%, rgba(245, 245, 249, 0));
-    -webkit-mask: linear-gradient(#f5f5f9, #f5f5f9 18%, transparent 100%);
-    mask: linear-gradient(#f5f5f9, #f5f5f9 18%, transparent 100%)
-}
 
 .bg-menu-theme {
     background-color: #fff !important;
