--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.css
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.css
@@ -1,3 +1,10 @@
 ::ng-deep .bg-gradient-primary {
     background-image: linear-gradient(310deg, #cca558, #8f7134) !important; /* Override with ng-deep */
 }
+.sidenav .navbar-brand {
+    margin: 0 !important;
+}
+
+.text{
+    color: #493201 !important;
+}
