--- a/src/app/client/dashboard/virement-multiple/virement-multiple.component.html
+++ b/src/app/client/dashboard/virement-multiple/virement-multiple.component.html
@@ -40,12 +40,12 @@
                                             <p class="error font-size-16 bold ng-binding"></p>
                                         </div>
                                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 pb-2 "
-                                            (click)="GoToNextStepBamboo()" style="cursor: pointer;">
+                                            (click)="GoToNextStepDigiBank()" style="cursor: pointer;">
                                             <div class="card card-radius card-border welcome-card bg-light "
-                                                alt="BAMBOO" title="BAMBOO">
+                                                alt="DigiBank" title="DigiBank">
                                                 <p class="versement-text text-center pt-2 ">
                                                     <i class="fas fa-file-invoice-dollar pr-2"
-                                                        style="color:  #493201 !important"></i> BAMBOO
+                                                        style="color:  #493201 !important"></i> DigiBank
                                                 </p>
                                             </div>
                                         </div>
