--- a/src/app/client/dashboard/virement/virement.component.html
+++ b/src/app/client/dashboard/virement/virement.component.html
@@ -28,7 +28,7 @@
             <div class="col-11">
               <div class="card">
                 <div class="card-header">
-                  Cette transaction permet de virer un montant vers un de vos comptes BAMBOO.
+                  Cette transaction permet de virer un montant vers un de vos comptes DigiBank.
                 </div>
                 <div class="card-body">
                   <div class="row">
