--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -6,14 +6,14 @@
             <h2>{{ 'register.title' | translate }}</h2>
             <div class="card-container">
                 <div class="card">
-                    <a href="/dash" class="card-link">
+                    <a href="/dash/informations-personelles" class="card-link">
                         <div class="card-body">
                             <h5 class="card-title">{{ 'register.type1' | translate }}</h5>
                         </div>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="/professionnel" class="card-link">
+                    <a href="/professionnel/informations-du-mandataire" class="card-link">
                         <div class="card-body">
                             <h5 class="card-title">{{ 'register.type2' | translate }}</h5>
                         </div>
@@ -32,7 +32,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div id="copyright-content">
             <i class="bi bi-c-circle"></i>
-            <span>{{ currentYear }}</span> Bamboo
+            <span>{{ currentYear }}</span> DigiBank
         </div>
     </div>
 </section>
