--- a/src/app/client/welcome-client/welcome-client.component.css
+++ b/src/app/client/welcome-client/welcome-client.component.css
@@ -1,7 +1,1 @@
-
-
-.centerlottie{
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-  }
+@import '../login/login.component.css';
