--- a/src/app/client/password/password.component.html
+++ b/src/app/client/password/password.component.html
@@ -35,7 +35,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div id="copyright-content">
             <i class="bi bi-c-circle"></i>
-            <span>{{ currentYear }}</span> Bamboo
+            <span>{{ currentYear }}</span> DigiBank
         </div>
     </div>
   </section>
