--- a/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
+++ b/src/app/client/transactionsDashboard/my-contacts/my-contacts-add/my-contacts-add.component.html
@@ -40,8 +40,8 @@
                             <div class="form-group f1">
                               <label>Type of Account:</label>
                               <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountBamboo{{i}}" [(ngModel)]="card.accountType" value="Bamboo" />
-                                <label class="form-check-label" for="accountBamboo{{i}}">BAMBOO</label>
+                                <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountDigiBank{{i}}" [(ngModel)]="card.accountType" value="DigiBank" />
+                                <label class="form-check-label" for="accountDigiBank{{i}}">DigiBank</label>
                               </div>
                               <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="accountType{{i}}" id="accountOtherBank{{i}}" [(ngModel)]="card.accountType" value="OtherBank" />
@@ -93,7 +93,7 @@
                             <!-- Contact Name -->
                             <div class="form-group col-md-6">
                               <label for="contactName">Contact Name</label>
-                              <input type="text" class="form-control" id="contactName" [(ngModel)]="contactName" placeholder="Enter contact name">
+                              <input type="text" class="form-control" id="contactName" [(ngModel)]="fullName" placeholder="Enter contact name">
                             </div>
                           </div>
                           
@@ -110,7 +110,10 @@
                               <input type="text" class="form-control" id="category" [(ngModel)]="category" placeholder="Enter category (e.g., Family)">
                             </div>
                           </div>
-                          
+                          <div class="form-group col-md-6">
+                            <label for="gender">Gender</label>
+                            <input type="text" class="form-control" id="gender" [(ngModel)]="gender" placeholder="Enter gender">
+                          </div>
                           <div class="row">
                             <!-- Favorites -->
                             <div class="form-group col-md-6 d-flex align-items-center">
@@ -125,7 +128,7 @@
                             <div class="form-group col-md-6">
                               <div class="input-group">
                                 <div class="custom-file">
-                                  <input type="file" class="custom-file-input" id="upload" (change)="onFileChange($event)">
+                                  <input type="file" class="custom-file-input" id="upload" [(ngModel)]="imageContact"(change)="onFileChange($event)">
                                   <label class="custom-file-label pad" for="upload">
                                     <i class="ion-android-cloud-outline"></i>Upload picture
                                   </label>
@@ -140,25 +143,13 @@
                             <li><a href="#"><i class="ion-paperclip"></i>{{ uploadedFileName }}</a></li>
                           </ul>
                           <button type="button" class="action-button previous previous_button">Back</button>
-                          <button type="button" class="next action-button">Continue</button>  
+                          <button type="button" class="next action-button" >Continue</button>  
                         </fieldset>  
 
 
                         <fieldset>
-                          <h3>Create Security Questions</h3>
-                          <h6>Please update your account with security questions</h6> 
-                          <div class="form-group">
-                            <label>Contact Name:</label>
-                            <input type="text" class="form-control" [(ngModel)]="contactName" disabled>
-                          </div>
-                          <div class="form-group">
-                            <label>Address:</label>
-                            <input type="text" class="form-control" [(ngModel)]="address" disabled>
-                          </div>
-                          <div class="form-group">
-                            <label>RIB:</label>
-                            <input type="text" class="form-control" [(ngModel)]="ribValue" disabled>
-                          </div>                        
+                          
+                                             
                           <button type="button" class="action-button previous previous_button">Back</button> 
                           <a class="action-button" (click)="finish()">Finish</a> 
                         </fieldset>  
